language/move-lang/tests/move_check/typing/loop_result_type.exp
error: 

    ┌── tests/move_check/typing/loop_result_type.move:19:13 ───
    │
 19 │         foo(loop {})
    │             ^^^^^^^ Invalid use of a divergent expression. The code following the evaluation of this expression will be dead and should be removed. In some cases, this is necessary to prevent unused resource values.
    │

error: 

    ┌── tests/move_check/typing/loop_result_type.move:25:17 ───
    │
 25 │         let x = loop { 0; };
    │                 ^^^^^^^^^^^ Invalid use of a divergent expression. The code following the evaluation of this expression will be dead and should be removed. In some cases, this is necessary to prevent unused resource values.
    │

